# eye_tracking

./: .gitignore  .gitmodules  README.md  data_sync.sh  event_counts_by_participant.xlsx  pyproject.toml  sp_sync.sh  unmatched_markers.xlsx
doc/: https___go.tobii.com_Tobii-Pro-Lab-data-export-info.url
events/: README.md  read-events.py  requirements.txt  setup.sh
models/: ensemble_inference.py  jcafnet.py  lstm_autoencoder.py  lstm_classifier.py  tnc_block.py
notebooks/: 00_data_plots.ipynb  01_analysis_xgboost.ipynb  02_analysis_jcafnet.ipynb  03_ensemble_model.ipynb  AWARE ET data processing.ipynb  sandbox.ipynb  sandbox_asd.ipynb  sandbox_asd_download.ipynb  sandbox_asd_integration.ipynb  sandbox_atco_data.ipynb  sandbox_atco_real_time.ipynb  sandbox_chunks.ipynb  sandbox_feature_eng.ipynb  sandbox_feature_engineering.ipynb  sandbox_jcafnet.ipynb  sandbox_labelling_investigation.ipynb  sandbox_lstm_classifier.ipynb  sandbox_nino.ipynb  sandbox_polaris_data_analysis.ipynb  sandbox_polaris_events.ipynb  sandbox_polaris_mouse.ipynb  sandbox_time_sync.ipynb  sandbox_training.ipynb  sandbox_windows_data.ipynb  sandbox_xgboost.ipynb  sandbox_xgboost_raw.ipynb  train_on_chunks.ipynb
sync/: models.py  synchronizer.py
trainings/: 00_lstm_training.submit  01_jcafnet_training.py  02_xgboost_training.py  [dep]_xgboost_training.py  _01_jcafnet_training.py  _01_xgboost_hierarchical_training.py  _02_xgboost_hierarchical_training.py  _02_xgboost_training.py  jcafnet_training.py  old_xgboost_training.py  run_jcafnet.submit  run_jcafnet_xgboost.submit  run_xgboost.sh  (+6 more)
(+77 files in other folders)
