[project]
name = "eye-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "lightning>=2.5.1",
    "matplotlib>=3.10.1",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchmetrics>=1.7.0",
    "wandb>=0.19.9",
    "xgboost>=3.0.0",
]
