[project]
name = "eye-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asterix-decoder>=0.7.9",
    "dbfread>=2.0.7",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1",
    "matplotlib>=3.10.1",
    "matplotlib-venn>=1.1.2",
    "notebook>=7.4.2",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "pandas>=2.2.3",
    "protobuf>=5.29.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchmetrics>=1.7.0",
    "torchvision>=0.21.0",
    "tsfresh>=0.21.0",
    "wandb>=0.19.9",
    "xgboost>=3.0.0",
    "xlsxwriter>=3.2.9",
]

[project.optional-dependencies]
cluster = [
    "cm-jupyter-eg-kernel-wlm>=4.0.1",
]
